adicionado validação no body e adicionado mais informações no doc
